need to make some chganges

--- a/index.html
+++ b/index.html
@@ -136,6 +136,33 @@
 
 
             </section>
+<!-- ******************************************************************* -->
+            
+            <section id="fifthPage">
+
+                <div id="innerBox">
+
+                        <div class="endSection">
+                            <p class="head"> <strong> About this Page</strong></p>
+                            <p class="lines">This is an example website</p>
+                            <p class="lines"> for me to extend my limits</p>
+                            <p class="lines">and by the time </p>
+                            <p class="lines">become a bit better</p>                           
+
+                        </div>
+
+                        <div class="endSection1">
+                            <p class="head"><strong>Contact Info</strong></p>
+                            <p class="lines">E.mail : ******@gmail.com</p>
+                            <p class="lines"> mob :****000***0</p>
+                        </div>
+
+                </div>
+
+
+            </section>
+
+
 <!-- ****************************************************************** -->
         </div>
 
