piuc problem solved background left

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 </nav>
 
                 <div class="offer" >
-                    <img class="offers" src="/image/offer1.jpg" width="100%">
-                    <img class="offers" src="/image/offer2.jpg" width="100%">
-                    <img class="offers" src="/image/offer3.jpg" width="100%">
+                    <img class="offers" src="./image/offer1.jpg" width="100%">
+                    <img class="offers" src="./image/offer2.jpg" width="100%">
+                    <img class="offers" src="./image/offer3.jpg" width="100%">
                 </div>
 
 
@@ -44,7 +44,7 @@
                 </div>
 
                 <div id="trial1">
-                    <img src="/image/flip1.webp">
+                    <img src="./image/flip1.webp">
 
                 </div>
 
@@ -55,73 +55,73 @@
 
                 <div class="box">
                     <a href="https://www.flipkart.com/fashion-basket-anarkali-gown/p/itme5a8c350387d4?pid=GWNFHVKVRHTDZZCN&lid=LSTGWNFHVKVRHTDZZCNA08HVV&marketplace=FLIPKART&srno=s_1_2&otracker=search&fm=SEARCH&iid=en_82I3HTmiIawy0jtXbS45IxpGNaPAtrYVogTGGTdbYuDmqKixfaWJ7fUYH3Gx7na9%2F977sopfAzFgLTdAAVeBAQ%3D%3D&ppt=browse&ppn=browse&ssid=wmdcxasurk0000001597177039742&qH=4f4b914d6db35e19" target="_blank">
-                        <img src="/image/fashion1.webp"></a>
+                        <img src="./image/fashion1.webp"></a>
                         <p align="center">Embroidered Pure Silk Semi Stitched Anarkali Gown  (Dark Blue) <br> <strong>₹ 2,197 </strong> <del>₹ 4,999</del> </p>
                 </div>
 
                 <div class="box">
                     <a href="https://www.flipkart.com/nena-fashion-anarkali-gown/p/itm5d5a27e1580e0?pid=GWNFGW5Y93BR82KX&lid=LSTGWNFGW5Y93BR82KX3CNYJG&marketplace=FLIPKART&srno=s_1_3&otracker=search&fm=SEARCH&iid=90066c45-7ef6-4b59-9916-542152f2d496.GWNFGW5Y93BR82KX.SEARCH&ppt=browse&ppn=browse&ssid=s6mn890yfk0000001597247732243&qH=4f4b914d6db35e19" target="_blank">
-                        <img src="/image/fashion2.webp"></a>
+                        <img src="./image/fashion2.webp"></a>
                         <p align="center"> Embroidered Pure Silk Semi Stitched Anarkali Gown  (Pink)  <br> <strong>₹ 372</strong>  <del>₹1,974 </del></p>
                 </div>
 
                 <div class="box">
                     <a href="https://www.flipkart.com/ziva-fashion-girls-maxi-full-length-party-dress/p/itmfgft8quxymwqf?pid=KDEFFWWHZCTNQT8S&lid=LSTKDEFFWWHZCTNQT8SOM8SCW&marketplace=FLIPKART&srno=s_1_22&otracker=search&fm=SEARCH&iid=90066c45-7ef6-4b59-9916-542152f2d496.KDEFFWWHZCTNQT8S.SEARCH&ppt=browse&ppn=browse&qH=4f4b914d6db35e19" target="_blank">
-                        <img src="/image/fashion3.webp"></a>
+                        <img src="./image/fashion3.webp"></a>
                         <p align="center"> Girls Maxi/Full Length Party Dress  (Pink, Sleeveless) <br> <strong>₹ 664 </strong> <del>₹ 1,599 </del></p>
                 </div>
 
                 <div class="box">
                     <a href="https://www.flipkart.com/3buddy-fashion-anarkali-gown/p/itm2d5ad4beaa5bf?pid=GWNFGGQMCZUMGAMH&lid=LSTGWNFGGQMCZUMGAMHL2D9DI&marketplace=FLIPKART&srno=s_1_35&otracker=search&fm=SEARCH&iid=90066c45-7ef6-4b59-9916-542152f2d496.GWNFGGQMCZUMGAMH.SEARCH&ppt=browse&ppn=browse&qH=4f4b914d6db35e19" target="_blank">
-                        <img src="/image/fashion4.webp"></a>
+                        <img src="./image/fashion4.webp"></a>
                         <p align="center"> Self Design, Embellished Satin Blend, Net Semi Stitched Anarkali Gown  (Red, Black) <br> <strong>₹ 799 </strong>  <del>₹ 2,999 </del></p>
                 </div>
 
                 <div class="box">
                     <a href="https://www.flipkart.com/fashion-ritmo-women-fit-flare-blue-dress/p/itmb9c5490f9e0dd?pid=DREFMN2GNHQZRJYB&lid=LSTDREFMN2GNHQZRJYBUEBQIJ&marketplace=FLIPKART&srno=s_10_362&otracker=search&fm=SEARCH&iid=9061d2c7-7a65-47cb-92be-8b59a86204fa.DREFMN2GNHQZRJYB.SEARCH&ppt=browse&ppn=browse&qH=4f4b914d6db35e19" target="_blank">
-                        <img src="/image/fashion5.webp"></a>
+                        <img src="./image/fashion5.webp"></a>
                         <p align="center"> Women Fit and Flare Blue Dress <br> <strong>₹ 799</strong> <del>₹ 1,600 </del></p>
                 </div>
 
                 <div class="box">
                     <a href="https://www.flipkart.com/shreeraj-fashion-anarkali-gown/p/itm5f87b63e425ae?pid=GWNFNGNJEJUKUTMY&lid=LSTGWNFNGNJEJUKUTMYXRXKXX&marketplace=FLIPKART&srno=s_10_379&otracker=search&fm=SEARCH&iid=9061d2c7-7a65-47cb-92be-8b59a86204fa.GWNFNGNJEJUKUTMY.SEARCH&ppt=browse&ppn=browse&qH=4f4b914d6db35e19" target="_blank">
-                        <img src="/image/fashion6.webp"></a>
+                        <img src="./image/fashion6.webp"></a>
                         <p align="center"> Embroidered Georgette Blend Semi Stitched Anarkali Gown  (Purple) <br> <strong> ₹ 1,199</strong> <del>₹ 2,599 </del></p>
                 </div>
 
                 <div class="box">
                     <a href="https://www.flipkart.com/lilaba-fashion-anarkali-gown/p/itme03cf19f9ce4d?pid=GWNFGPHAQJD6QXDQ&lid=LSTGWNFGPHAQJD6QXDQKKQSDI&marketplace=FLIPKART&srno=s_10_391&otracker=search&fm=SEARCH&iid=9061d2c7-7a65-47cb-92be-8b59a86204fa.GWNFGPHAQJD6QXDQ.SEARCH&ppt=browse&ppn=browse&qH=4f4b914d6db35e19" target="_blank">
-                        <img src="/image/fashion7.webp"></a>
+                        <img src="./image/fashion7.webp"></a>
                         <p align="center"> Satin Blend Semi Stitched Anarkali Gown  (White) <br> <strong>₹ 649</strong> <del>₹ 1,999 </del></p>
                 </div>  
 
                 <div class="box">
                     <a href="https://www.flipkart.com/ziva-fashion-girls-maxi-full-length-casual-dress/p/itm6be687c9d05a3?pid=KDEFKGRC2SWSUKCC&lid=LSTKDEFKGRC2SWSUKCCU47MEK&marketplace=FLIPKART&srno=s_12_441&otracker=search&fm=SEARCH&iid=75caaf5e-5910-4098-9e00-e6d414b50b3f.KDEFKGRC2SWSUKCC.SEARCH&ppt=browse&ppn=browse&qH=4f4b914d6db35e19" target="_blank">
-                        <img src="/image/fashion8.webp"></a>
+                        <img src="./image/fashion8.webp"></a>
                         <p align="center"> Girls Maxi/Full Length Casual Dress  (Blue, Sleeveless) <br><strong> ₹ 759</strong> <del>₹ 1,599 </del></p>
                 </div>
 
                 <div class="box">
                     <a href="https://www.flipkart.com/vincy-fashion-women-drop-waist-maroon-dress/p/itmc2fbfef55ab07?pid=DREFPYE9EMNHA9GG&lid=LSTDREFPYE9EMNHA9GGAF3H7S&marketplace=FLIPKART&srno=s_12_443&otracker=search&fm=SEARCH&iid=75caaf5e-5910-4098-9e00-e6d414b50b3f.DREFPYE9EMNHA9GG.SEARCH&ppt=browse&ppn=browse&qH=4f4b914d6db35e19" target="_blank">
-                        <img src="/image/fashion9.webp"></a>
+                        <img src="./image/fashion9.webp"></a>
                         <p align="center"> Women Drop Waist Maroon Dress <br><strong>₹ 699 </strong> <del>₹ 2,699 </del></p>
                 </div>
 
                 <div class="box">
                     <a href="https://www.flipkart.com/r-j-fashion-women-two-piece-dress-red-white/p/itm0a9dbb30ccf92?pid=DREFPHU8CNGZ5G59&lid=LSTDREFPHU8CNGZ5G59ORFKKS&marketplace=FLIPKART&srno=s_12_463&otracker=search&fm=SEARCH&iid=75caaf5e-5910-4098-9e00-e6d414b50b3f.DREFPHU8CNGZ5G59.SEARCH&ppt=browse&ppn=browse&qH=4f4b914d6db35e19" target="_blank">
-                        <img src="/image/fashion10.webp"></a>
+                        <img src="./image/fashion10.webp"></a>
                         <p align="center"> Women Two Piece Dress Red, White Dress <br> <strong> ₹ 470 </strong> <del>₹ 1,100 </del></p>
                 </div>
 
                 <div class="box">
                     <a href="https://www.flipkart.com/vincy-fashion-women-drop-waist-dark-blue-dress/p/itm4f7bf9f18127d?pid=DREFPYEUMGQHHVX4&lid=LSTDREFPYEUMGQHHVX4PGHP9J&marketplace=FLIPKART&srno=s_12_467&otracker=search&fm=SEARCH&iid=75caaf5e-5910-4098-9e00-e6d414b50b3f.DREFPYEUMGQHHVX4.SEARCH&ppt=browse&ppn=browse&qH=4f4b914d6db35e19" target="_blank">
-                        <img src="/image/fashion11.webp"></a>
+                        <img src="./image/fashion11.webp"></a>
                         <p align="center"> Women Drop Waist Dark Blue Dress <br> <strong>₹ 599 </strong> <del>₹ 2,499 </del></p>
                 </div>
 
                 <div class="box">
                     <a href="https://www.flipkart.com/ziva-fashion-girls-maxi-full-length-festive-wedding-dress/p/itmdabd2bcd1f66c?pid=KDEFNAHAKEFCHZGK&lid=LSTKDEFNAHAKEFCHZGKOCSCZO&marketplace=FLIPKART&srno=s_14_529&otracker=search&fm=SEARCH&iid=31584f3c-ad8a-4f71-a0ee-e0139b3103eb.KDEFNAHAKEFCHZGK.SEARCH&ppt=browse&ppn=browse&qH=4f4b914d6db35e19"target="_blank">
-                        <img src="/image/fashion12.webp"></a>
+                        <img src="./image/fashion12.webp"></a>
                         <p align="center"> Girls Maxi/Full Length Festive/Wedding Dress  (Yellow, Sleeveless) <br> <strong>₹ 378 </strong> <del>₹ 999</del> </p>
                 </div>
 
