a new fashion page

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <ul>
                         <li id="logo"><a href="#"></a></li>
                         <li id="space"> &nbsp;</li>
-                        <li id="item">HOME</li>
-                        <li id="item">FASHION</li>
+                        <li id="item"> <a href="./index.html">HOME</a></li>
+                        <li id="item"><a href="./fashion.html">FASHION</a></li>
                         <li id="item">CONTACTS</li>
                         <li id="item">ABOUT</li>
                         
