contact page added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <li id="space"> &nbsp;</li>
                         <li id="item"> <a href="./index.html">HOME</a></li>
                         <li id="item"><a href="./fashion.html">FASHION</a></li>
-                        <li id="item">CONTACTS</li>
+                        <li id="item"><a href="./contact.html">CONTACT ME</a></li>
                         <li id="item">ABOUT</li>
                         
                     </ul>
