--- a/contact.html
+++ b/contact.html
@@ -29,17 +29,16 @@
                 <div class="fashion" align="center">
 
                     <ul>
-                        <li>SOME POPULAR SITES TO PURCHASE CLOTHES</li>
-                        <li class="fashion1"><a href="https://www.flipkart.com/clothing-and-accessories/dresses-and-gowns/pr?sid=clo,odx&q=fashion&otracker=categorytree" target="_blank">FLIPKART</a></li>
+                        <li>CONTACT ME</li>
+                        <li class="fashion1"><a href="" target="_blank">A</a></li>
 
-                        <li class="fashion1"><a href="https://www.amazon.com/s?i=fashion-womens-intl-ship&bbn=16225018011&rh=n%3A16225018011%2Cn%3A1040660%2Cn%3A9522932011&dc&qid=1597612330&rnid=1040660&ref=sr_nr_n_15" target="_blank">AMAZON</a></li>
-                        <li class="fashion1"><a href="https://www.myntra.com/western-wear-dresses-menu" target="_blank">MYNTRA</a></li>
+                        <li class="fashion1"><a href="" target="_blank">B</a></li>
+                        <li class="fashion1"><a href="" target="_blank">C</a></li>
 
 
                     </ul>
                    
                 </div>
-
 
 
 
