all pages donr  abit chnges in contact section to  make it almost dont

--- a/about.html
+++ b/about.html
@@ -29,17 +29,16 @@
                 <div class="fashion" align="center">
 
                     <ul>
-                        <li>SOME POPULAR SITES TO PURCHASE CLOTHES</li>
-                        <li class="fashion1"><a href="https://www.flipkart.com/clothing-and-accessories/dresses-and-gowns/pr?sid=clo,odx&q=fashion&otracker=categorytree" target="_blank">FLIPKART</a></li>
-
-                        <li class="fashion1"><a href="https://www.amazon.com/s?i=fashion-womens-intl-ship&bbn=16225018011&rh=n%3A16225018011%2Cn%3A1040660%2Cn%3A9522932011&dc&qid=1597612330&rnid=1040660&ref=sr_nr_n_15" target="_blank">AMAZON</a></li>
-                        <li class="fashion1"><a href="https://www.myntra.com/western-wear-dresses-menu" target="_blank">MYNTRA</a></li>
+                        <li>ABOUT</li>
+                        <li class="fashion1" style="color: blue; font-size: 30px;">I am Shubham Kumar,
+                             an I.T. student. There are some webpages I have made and am pursuing forward to
+                              learn more towards this field in the time.<br><br> This is an Example website
+                               for me to extend my limits and by the time become a bit better in it.</li>
 
 
                     </ul>
                    
                 </div>
-
 
 
 
