--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
                         <li id="space"> &nbsp;</li>
                         <li id="item"> <a href="./index.html">HOME</a></li>
                         <li id="item"><a href="./fashion.html">FASHION</a></li>
-                        <li id="item"><a href="./contact.html">CONTACT ME</a></li>
-                        <li id="item">ABOUT</li>
+                        <li id="item"><a href="./contact.html">CONTACT</a></li>
+                        <li id="item"><a href="./about.html">ABOUT</a></li>
                         
                     </ul>
 
