a bit changes in font

--- a/index.html
+++ b/index.html
@@ -144,10 +144,9 @@
 
                         <div class="endSection">
                             <p class="head"> <strong> About this Page</strong></p>
-                            <p class="lines">This is an example website</p>
-                            <p class="lines"> for me to extend my limits</p>
-                            <p class="lines">and by the time </p>
-                            <p class="lines">become a bit better</p>                           
+                <p class="lines">This is an example website</p>
+                <p class="lines"> as a fashion store</p>
+                <p class="lines">for womens </p>                      
 
                         </div>
 
